--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,9 +1,9 @@
-all: openmsxvr openmsxvr-test
+all: openmsxvr-cli
 
 # openmsxvr-test: test.cpp ../lib/msxvr.a
 #	g++ test.cpp ../lib/msxvr.a -li2c -o openmsxvr-test
 
 openmsxvr-cli: main.cpp ../lib/msxvr.a
 	g++ main.cpp ../lib/msxvr.a -li2c -o openmsxvr-cli
-	cpopenmsx
+# cpopenmsx
 
